# chip8.rs

./: web
chip8_core/src/: lib.rs
desktop/: Cargo.toml  myprogram
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/web/: index.html  index.js  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
