[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8_core = { path = "../chip8_core" }

[dependencies.sdl2]
version = "^0.34.3"
default-features = false
features = ["ttf"]

[dependencies.sdl2-sys]
features = ["use_mac_framework"]
